# wsb_grow_repo

./: README.md
client/: BUILD  WORKSPACE
client/proto/: BUILD.bazel  grow.proto
client/rpc_client/: BUILD.bazel  rpc_client.py
client/rpc_client/libs/: BUILD  grow_request_builder.py  request_factory.py
client/server/: BUILD.bazel  grow.py  grow_lib.py
client/server/lib/: BUILD.bazel  dht_22_reader.py  response_builder.py  sparkfun_luminati422.py  system_params_reader.py
client/webclient/: BUILD.bazel
client/webclient/frontend/: BUILD.bazel  app.py
client/webclient/frontend/templates/: BUILD.bazel  base.html  dht22.html  home.html  index.html  system_monitor.html
client/webclient/frontend/templates/css/: BUILD.bazel  styles.css
client/webclient/frontend/templates/dd/: node_info.html  node_info_scorecards.html
rpi/: WORKSPACE
rpi/proto/: grow.proto
rpi/rpc_client/: BUILD.bazel  rpc_client.py
rpi/server/: BUILD.bazel  grow.py  grow_lib.py  hard_stop.sh  init.sh
rpi/server/lib/: BUILD.bazel  ads1x15.py  capacitive_soil_moisture_sensor__reader.py  dht22__reader.py  simple_led__setter.py  system_params__getter.py  tsl2591__reader.py  utils.py
rpi/server/lib/proto/: grow_pb2.py  grow_pb2_grpc.py
